added stylings, functionaity, DB connection...

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.4"
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
+    "mysql2": "^3.15.2",
+    "react-router-dom": "^7.9.4",
+    "swiper": "^12.0.2"
   }
 }
