--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "server": "npm start --prefix server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "swiper": "^12.0.2"
   }
 }
