--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "ecommerce.v2",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "npm start --prefix server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "vite": "^7.1.7"
+  },
   "dependencies": {
+    "@vitejs/plugin-react": "^5.0.4",
+    "axios": "^1.13.2",
+    "react": "^19.2.0",
     "react-router-dom": "^7.9.4",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.3"
   }
 }
