--- a/package.json
+++ b/package.json
@@ -3,19 +3,29 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "vite": "^7.1.7"
-  },
+  "main": "eslint.config.js",
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "mysql2": "^3.15.2",
     "react-router-dom": "^7.9.4",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "concurrently \"npm run start --prefix client\" \"npm run start --prefix server\"",
+    "install-all": "npm install --prefix server && npm install --prefix client",
+    "build": "npm run build --prefix client",
+    "client": "npm run dev --prefix client",
+    "server": "npm start --prefix server",
+    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\""
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "vite": "^7.1.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KaiaBryant/trellis.v2.git"
   }
 }
