--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-DB_HOST=ecommerce.crk0s82muooa.us-east-2.rds.amazonaws.com
-DB_USER=admin
-DB_PASSWORD=OkayLater1234!
-DB_NAME=ecommercev2
-PORT=5000
-DB_PORT=3306
+DB_HOST=shuttle.proxy.rlwy.net
+DB_USER=root
+DB_PASSWORD=SfOwRYViPYdlPxkiAZqfeQtBTCoCkvoC
+DB_NAME=railway
+DB_PORT=16708
+FRONTEND_URL=http://localhost:5173
+
